<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_square_equation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#4490e2"
    tools:context="com.example.irena.equations.SquareEquation">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_wnanie_kwadratowe_ax_2_bx_c_0"
        android:id="@+id/title2"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="15sp"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/title2"
    android:id="@+id/fieldCount">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=" a "
        android:id="@+id/dataA"
        android:layout_below="@+id/title2"
        android:textColorHint="#4bffffff"
        android:textColor="#ffffff"
        android:inputType="numberDecimal|numberSigned"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_2"
        android:id="@+id/x"
        android:layout_toRightOf="@+id/dataA"
       android:layout_alignBaseline="@+id/dataA"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=" b "
        android:id="@+id/dataB"
        android:layout_toRightOf="@+id/x"
        android:textColorHint="#4bffffff"
        android:textColor="#ffffff"
        android:inputType="numberDecimal|numberSigned"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x2"
        android:text="@string/x"
        android:layout_toRightOf="@+id/dataB"
        android:layout_alignBaseline="@+id/dataB"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=" c "
        android:id="@+id/dataC"
        android:layout_toRightOf="@+id/x2"
        android:textColorHint="#4bffffff"
        android:textColor="#ffffff"
        android:inputType="numberDecimal|numberSigned"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/c"
        android:text="@string/_0"
        android:layout_toRightOf="@+id/dataC"
        android:layout_alignBaseline="@+id/dataC"
        android:textColor="#ffffff"
        android:textSize="20sp"
       />
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/delta"
        android:layout_below="@+id/fieldCount"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/solution1"
        android:layout_below="@+id/delta"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/solution2"
        android:layout_below="@+id/solution1"
        android:layout_marginTop="5dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lineButton"
    android:layout_below="@+id/solution2"

    
    android:layout_marginTop="20dp"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rozwi"
        android:onClick="countEquation"
        android:id="@+id/countEq"
        android:layout_below="@+id/solution2"
        android:layout_marginRight="5dp"
        style="@style/button"
        android:layout_weight="1"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wyczy"
        android:id="@+id/clear"
        android:onClick="clear"
        android:layout_alignBottom="@+id/countEq"
        android:layout_toRightOf="@+id/countEq"
        style="@style/button"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        />
</LinearLayout>
    <com.softmoore.android.graphlib.GraphView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/graphView"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/lineButton"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>
